fixing bug where labels would wrap to next line

--- a/main.css
+++ b/main.css
@@ -83,6 +83,8 @@ table tr td {
     text-align: right;
     padding-right: 1%;
     position: relative;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .eventBox {
